--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Example</title>
     </head>
     <body>
-        <p>Under Construction</p>
+        <p>% Yieldier: Under Construction</p>
     </body>
 </html>
